deploy/us-006a/aprobador/objects/Aprobador_Datos_Sensibles__mdt.object
<!-- US-006a Fase B (framework) - Matriz de aprobadores de datos sensibles (MDG).
     Estructura lista para la matriz completa (Sociedad + Departamento + Escenario).
     Fase A: solo el registro Default se usa. -->
<CustomObject>
    <label>Aprobador Datos Sensibles</label>
    <pluralLabel>Aprobadores Datos Sensibles</pluralLabel>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departamento__c</fullName>
        <label>Departamento (del solicitante)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escenario_Credito__c</fullName>
        <label>Escenario de Credito</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aprobador_Username__c</fullName>
        <label>Aprobador (Username)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_Default__c</fullName>
        <label>Es Default (fallback)</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
</CustomObject>